// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchResultEntry should render 1`] = `
<Link
  className="list-group-item active"
  onlyActiveOnIndex={false}
  style={Object {}}
  to="/documentation/foo/bar"
>
  <SearchResultTitle
    result={
      Object {
        "highlights": Object {},
        "longestTerm": "",
        "page": Object {
          "content": "",
          "navTitle": undefined,
          "relativeName": "foo/bar",
          "text": "Foobar is a universal variable understood to represent whatever is being discussed.",
          "title": "Foobar",
          "url": "/foo/bar",
        },
        "query": "",
      }
    }
  />
  <SearchResultText
    result={
      Object {
        "highlights": Object {},
        "longestTerm": "",
        "page": Object {
          "content": "",
          "navTitle": undefined,
          "relativeName": "foo/bar",
          "text": "Foobar is a universal variable understood to represent whatever is being discussed.",
          "title": "Foobar",
          "url": "/foo/bar",
        },
        "query": "",
      }
    }
  />
</Link>
`;

exports[`SearchResultText should correctly extract exact matches 1`] = `
<div
  className="note"
>
  <SearchResultTokens
    tokens={
      Array [
        Object {
          "marked": false,
          "text": "Foobar is a universal ",
        },
        Object {
          "marked": true,
          "text": "variable understood",
        },
        Object {
          "marked": false,
          "text": " to represent whatever is being discussed.",
        },
      ]
    }
  />
</div>
`;

exports[`SearchResultText should render with highlights 1`] = `
<div
  className="note"
>
  <SearchResultTokens
    tokens={
      Array [
        Object {
          "marked": false,
          "text": "Foobar is a ",
        },
        Object {
          "marked": true,
          "text": "universal",
        },
        Object {
          "marked": false,
          "text": " variable understood to represent whatever is being discussed.",
        },
      ]
    }
  />
</div>
`;

exports[`SearchResultText should render without highlights 1`] = `""`;

exports[`SearchResultTitle should render not without highlights 1`] = `
<h3
  className="list-group-item-heading"
  style={
    Object {
      "fontWeight": "normal",
    }
  }
>
  Foobar
</h3>
`;

exports[`SearchResultTitle should render with highlights 1`] = `
<h3
  className="list-group-item-heading"
  style={
    Object {
      "fontWeight": "normal",
    }
  }
>
  <SearchResultTokens
    tokens={
      Array [
        Object {
          "marked": true,
          "text": "Foobar",
        },
      ]
    }
  />
</h3>
`;

exports[`SearchResultTokens should render 1`] = `
<Fragment>
  Foobar is a 
  <mark
    key="1"
  >
    universal
  </mark>
   variable understood to represent whatever is being discussed.
</Fragment>
`;
